# AmazingTarot

./: .env.example  .gitignore  Require.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  readings.py  spreads.py  tarot.py
backend/app/services/: ai_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  Navbar.tsx  Stars.tsx  TarotCard.tsx
frontend/src/pages/: History.tsx  Home.tsx  Login.tsx  Reading.tsx  Register.tsx  Spreads.tsx
frontend/src/services/: api.ts
frontend/src/store/: api.ts  authStore.ts
